hello-jboss/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-jboss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-jboss
  template:
    metadata:
      labels:
        app: hello-jboss
    spec:
      volumes:
        - name: eap-keystore-volume
          secret:
            secretName: eap-ssl-secret
        - name: eap-jgroups-keystore-volume
          secret:
            secretName: eap-jgroup-secret
        - name: sso-keystore-volume
          secret:
            secretName: sso-ssl-secret
      containers:
        - name: hello-jboss
          image: hello-jboss
          livenessProbe:
            httpGet:
              path: /health/live
              port: admin
            initialDelaySeconds: 60
          readinessProbe:
            httpGet:
              path: /health/ready
              port: admin
            initialDelaySeconds: 10
          startupProbe:
            httpGet:
              path: /health/live
              port: admin
            initialDelaySeconds: 60
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
            - containerPort: 8443
              protocol: TCP
              name: https
            - containerPort: 8778
              protocol: TCP
              name: jolokia
            - containerPort: 8888
              protocol: TCP
              name: ping
            - containerPort: 9799
              protocol: TCP
            - containerPort: 9990
              protocol: TCP
              name: admin
          resources:
            requests:
              cpu: "500m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: '1Gi'
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: eap-keystore-volume
              mountPath: /etc/eap-secret-volume
              readOnly: true
            - name: eap-jgroups-keystore-volume
              mountPath: /etc/jgroups-encrypt-secret-volume
              readOnly: true
            - name: sso-keystore-volume
              mountPath: /etc/sso-secret-volume
              readOnly: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 75
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
