hello-jboss/k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: secure-hello-jboss
  labels:
    app: hello-jboss
spec:
  to:
    kind: Service
    name: secure-hello-jboss
  port:
    targetPort: 8443-tcp
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
